// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field name conversions infers refersTo from column names 1`] = `
"type Profile @refersTo(name: \\"profile\\") @model {
  id: String! @primaryKey
  details: String @refersTo(name: \\"Details\\") @index(name: \\"profilesByDetails\\")
}

type User @refersTo(name: \\"users\\") @model {
  id: String! @refersTo(name: \\"Id\\") @primaryKey(sortKeyFields: [\\"nameField\\"])
  nameField: String @refersTo(name: \\"name_field\\")
}
"
`;

exports[`Type name conversions infers refersTo from model name 1`] = `
"type Profile @refersTo(name: \\"profile\\") @model {
  id: String! @primaryKey
  details: String
}

type User @refersTo(name: \\"users\\") @model {
  id: String! @primaryKey
  name: String
}
"
`;
